javali_tests/A3/A4_keinestamSchmid/success/CorrectMethodCall.javali
// Rule 2.3.11+12: Verifying that correct number and types of parameters are allowed.
class A {}
class B extends A {}
class X extends A {}
class C extends B {}

class Main {
    void main() {
        A a; B b; X x; C c;
        a = new A();
        b = new B();
        x = new X();
        c = new C();
        
        myMethod(x, b, c);
    }

    void myMethod(A a, A a2, B b) {
        return;
    }
}
